# axum-login

./: AGENTS.md  CHANGELOG.md  README.md
axum-login/: Cargo.toml
axum-login/benches/: middleware_comparison.rs
axum-login/src/: backend.rs  lib.rs  middleware.rs  redirect.rs  require.rs
axum-login/src/require/: builder.rs  handler.rs  predicate.rs  service.rs
axum-login/tests/: feature_gates.rs  integration-test.rs
examples/multi-auth/: Cargo.toml
examples/multi-auth/src/web/: app.rs
examples/oauth2/: Cargo.toml
examples/permissions/: Cargo.toml
examples/permissions/src/web/: app.rs
examples/sqlite/: Cargo.toml
examples/sqlite/src/web/: app.rs
