[package]
name = "axum-login"
version = "0.18.0+frk.2"
description = "🪪 User identification, authentication, and authorization for Axum."
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-login"
license = "MIT"
keywords = ["authentication", "authorization", "login", "axum", "sessions"]
categories = [
  "web-programming::http-server",
  "web-programming",
  "database",
  "asynchronous",
]
repository = "https://github.com/maxcountryman/axum-login"
documentation = "https://docs.rs/axum-login"
readme = "../README.md"

publish = ["elleci"]

[dependencies]
axum = { version = "0.8", default-features = false, features = [
    "original-uri",
] }
subtle = "2"
serde = "1"
thiserror = "2"
tower-cookies = "0.11"
tower-layer = "0.3"
tower-service = "0.3"
tower-sessions = { version = "0.14", default-features = false }
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = { version = "0.1", features = ["log"] }
urlencoding = "2"
form_urlencoded = "1"

[dev-dependencies]
axum = "0.8"
mockall = "0.13"
reqwest = { version = "0.12", features = ["cookies"] }
serial_test = "3"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tower = "0.5"
tower-sessions = { version = "0.14" }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
